Adapte l'aide avec condition taux_incapacite à la nouvelle syntaxe

--- a/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports.yml
+++ b/data/benefits/javascript/intercommunalite_bordeaux-tarification-solidaire-des-transports.yml
@@ -15,9 +15,8 @@ profils:
   - type: situation_handicap
     conditions:
       - type: taux_incapacite
-        values:
-          - entre_50_et_80
-          - superieur_ou_egal_80
+        operator: ">="
+        value: 0.5
 type: bool
 periodicite: ponctuelle
 link: https://tarificationsolidaire.bordeaux-metropole.fr/Accueil.aspx
