--- a/data/benefits/javascript/metropole_toulon_provence_mediterranee_aide_au_permis_de_conduire.yml
+++ b/data/benefits/javascript/metropole_toulon_provence_mediterranee_aide_au_permis_de_conduire.yml
@@ -18,7 +18,7 @@ profils:
     conditions: []
   - type: apprenti
     conditions: []
-  - type: service civique
+  - type: service_civique
     conditions: []
   - type: beneficiaire_rsa
     conditions: []
