--- a/data/institutions/ville_villeurbanne.yml
+++ b/data/institutions/ville_villeurbanne.yml
@@ -1,5 +1,5 @@
 name: Ville de Villeurbanne
-imgSrc: img/institutions/logo_ville_villeurbanne.png
+imgSrc: img/institutions/logo_ville_villeurbanne.svg.png
 type: commune
 code_insee: "69266"
 code_siren: "216902668"
