--- a/data/benefits/javascript/region-ile-de-france-forfait-gratuite-jeunes-en-insertion.yml
+++ b/data/benefits/javascript/region-ile-de-france-forfait-gratuite-jeunes-en-insertion.yml
@@ -21,7 +21,9 @@ conditions_generales:
   - type: regions
     values:
       - "11"
-profils: []
+profils:
+  - type: stagiaire
+    conditions: []
 link: https://www.iledefrance-mobilites.fr/titres-et-tarifs/detail/le-forfait-gratuite-jeunes-en-insertion
 instructions: https://www.iledefrance-mobilites.fr/titres-et-tarifs/detail/le-forfait-gratuite-jeunes-en-insertion
 prefix: le
