Remplace le lien plus d'info de l'aide bafa de la CNAF qui menait vers le formulaire papier, par le lien vers la page d'info officielle

--- a/data/benefits/javascript/caf-aide-nationale-bafa.yml
+++ b/data/benefits/javascript/caf-aide-nationale-bafa.yml
@@ -15,7 +15,7 @@ conditions:
         30 mois à compter de l'inscription.
   - |-
     Envoyer le formulaire à votre Caf en <a target="_blank" title="Connexion au compte - Nouvelle fenêtre" rel="noopener" href="https://connect.caf.fr/connexionappli/dist/?forceReload=20211220&contexteAppel=caffr&urlredirect=%2Fwps%2Fmyportal%2Fcaffr#/login">vous connectant à votre compte</a>, dans ”Mes démarches” > ”À transmettre”.
-link: https://caf.fr/sites/default/files/medias/598/Documents/Bafa/DEMANDE%20AIDE%20BAFA.pdf
+link: https://www.service-public.fr/particuliers/actualites/A16188
 form: https://caf.fr/sites/default/files/medias/598/Documents/Bafa/DEMANDE%20AIDE%20BAFA.pdf
 prefix: l’
 type: float
