Ajoute le type inactif au profil cible de l'aide au permis de la Gironde

--- a/data/benefits/javascript/departement-gironde-aide-departementale-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/departement-gironde-aide-departementale-au-permis-de-conduire.yml
@@ -20,6 +20,7 @@ profils:
   - type: chomeur
   - type: beneficiaire_rsa
   - type: service_civique
+  - type: inactif
 conditions:
   - Etre éligible aux critères du Fonds d'Aide au Jeunes.
   - Résider dans une commune de la Gironde qui ne se situe pas au sein de la Métropole.
