--- a/data/benefits/openfisca/haute_saone_aide_permis.yml
+++ b/data/benefits/openfisca/haute_saone_aide_permis.yml
@@ -3,7 +3,7 @@ institution: departement_haute_saone
 description: Le Département aide les jeunes de 18 à 25 à financer leur permis de conduire.
 link: https://www.haute-saone.fr/index.php/nos-e-services/aides-aux-familles/pack-jeunes/
 conditions:
-  - Vous vous inscrivez dans une auto-école en conduite accompagnée ou traditionnelle.
+  - Être inscrit dans une auto-école en conduite accompagnée ou traditionnelle.
 teleservice: https://www.mes-services-publics70.fr/
 prefix: l’
 type: float
