--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -714,6 +714,18 @@ fields:
             collapsed: false
             types:
               - *field_taux_incapacite
+      - label: Inactif ou inactive
+        name: inactif
+        widget: object
+        fields:
+          - label: Conditions à satisfaire simultanément
+            label_singular: Condition à satisfaire
+            name: conditions
+            default: []
+            widget: list
+            collapsed: false
+            types:
+              - *field_age
   field_private_benefit: &field_private_benefit
     label: Masquer l'aide
     name: private
