--- a/.github/workflows/check-links-validity.yaml
+++ b/.github/workflows/check-links-validity.yaml
@@ -16,8 +16,4 @@ jobs:
         env:
           GRIST_DOC_ID: ${{ secrets.GRIST_DOC_ID }}
           GRIST_API_KEY: ${{ secrets.GRIST_API_KEY }}
-      - if: steps.invalid_links.outputs.comment
-        name: Send dead links info message
-        shell: bash
-        run: |
-          curl -i -X POST -H 'Content-Type: application/json' -d '{"text": ":icon-info: La liste des aides avec des liens invalides a été mise à jour ici : [lien](https://github.com/betagouv/aides-jeunes/issues/2945)"}' ${{ secrets.MATTERMOST_POST_URL }}
+          MATTERMOST_ALERTING_URL: ${{ secrets.MATTERMOST_ALERTING_URL }}
